# pslightdash

./: .gitignore  CMakeLists.txt  README.md
include/: context.h  dbg.h  discordhooker.h  discordhooker.hpp  httplib.hpp  pslightdash.h  pslightdash.hpp  pslightdashconfig.h  pslightdashconfig.h.in  renderable.h  renderer.h  stb_image.h  utils.h  utils.hpp  webhooker.hpp
include/KHR/: khrplatform.h
include/dash/: baserendertarget.h  test3d.h  testrendertarget.h  text.h
include/dash/vis/: audio_sdl.h  dashfft.h  dashvis.h  decode.h
include/gl/: glcontext.h  glfont.h  glrendertarget.h  glrendertargetbuilder.h  glshader.h  gltexture.h
include/glad/: glad.h
include/primitives/: primitives.h
include/render/: font.h  program.h  program.hpp  renderable.h  renderable.hpp  rendercontext.h  rendercontext.hpp  renderer.h  renderer.hpp  shader.h  text.h  texture.h  texture.hpp
include/util/: math.h
res/glsl/: 3d_fragment.glsl  3d_vertex.glsl  bg_fragment.glsl  bg_vertex.glsl  font_fragment.glsl  font_vertex.glsl  test_fragment.glsl  test_vertex.glsl  vis_fragment.glsl  vis_vertex.glsl
src/: AudioFFT.cpp  context.cpp  discordhooker.cpp  pslightdash.cpp  renderable.cpp  renderer.cpp  stb_image.cpp  utils.cpp  webhooker.cpp
src/dash/: test3d.cpp  testrendertarget.cpp  text.cpp
src/dash/vis/: AudioFFT.cpp  audio_sdl.c  dashfft.cpp  dashvis.cpp  decode.c
src/gl/: glcontext.cpp  glfont.cpp  glrendertarget.cpp  glrendertargetbuilder.cpp  glshader.cpp  gltexture.cpp
src/glad/: glad.c
src/render/: font.cpp  program.cpp  renderable.cpp  rendercontext.cpp  renderer.cpp  shader.cpp  text.cpp  texture.cpp
src/util/: math.cpp
